# social-plans-management-cpp-ver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
docs/: project-git-workflow.md
src/: DependencyInjection.h  main.cpp
src/console/: CommandLineInterface.cpp  CommandLineInterface.h  ErrorHandler.cpp  ErrorHandler.h  View.h  ViewConsole.cpp  ViewConsole.h
src/console/commands/: Command.h
src/console/commands/activity/: CreateActivity.cpp  CreateActivity.h
src/console/commands/plan/: AddActivityToPlan.cpp  AddActivityToPlan.h  EnrollSubscriber.cpp  EnrollSubscriber.h  GetPlanDuration.cpp  GetPlanDuration.h  GetPlanPrice.cpp  GetPlanPrice.h
src/console/commands/plan/crud/: CreatePlan.cpp  CreatePlan.h  DeletePlan.cpp  DeletePlan.h
src/console/commands/plan/list/: AvailablePlans.cpp  AvailablePlans.h  CostRangePlans.cpp  CostRangePlans.h  PlansContainingKeyword.cpp  PlansContainingKeyword.h  SubscribedPlans.cpp  SubscribedPlans.h  WeekendPlans.cpp  WeekendPlans.h
src/console/commands/user/: CreateUser.cpp  CreateUser.h  Login.cpp  Login.h  Logout.cpp  Logout.h
src/console/exceptions/: UnsupportedAttributesException.h  UnsupportedCommandException.h
src/data/daos/: ActivityRepository.h  GenericRepository.h  PlanRepository.h  UserRepository.h
src/data/daos/map/: ActivityRepositoryMap.cpp  ActivityRepositoryMap.h  GenericRepositoryMap.cpp  GenericRepositoryMap.h  PlanRepositoryMap.cpp  PlanRepositoryMap.h  UserRepositoryMap.cpp  UserRepositoryMap.h
src/data/models/: User.cpp  User.h
src/data/models/exceptions/: InvalidAttributeException.h
src/data/models/spm/: Activity.cpp  Activity.h  Plan.cpp  Plan.h
src/data/models/spm/activityTypes/: Cinema.cpp  Cinema.h  Theater.cpp  Theater.h
src/services/: ActivityService.cpp  ActivityService.h  PlanService.cpp  PlanService.h  Session.cpp  Session.h  UserService.cpp  UserService.h
src/services/exceptions/: DuplicateException.h  NotFoundException.h  SecurityAuthorizationException.h  SecurityProhibitionException.h
